--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,9 @@
   }
 }
 
+$headerVerticalPadding: 40px;
+$colorGray: #e5e5e5;
+
 .page {
   &__body {
     font-family: "Inter", sans-serif;
@@ -39,18 +42,70 @@
 
 .icon {
   display: block;
-  width: 18px;
-  height: 18px;
-
-  @include onDesktop {
-    width: 24px;
-    height: 24px;
-
-  }
+  width: 100%;
+  height: 100%;
 
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+
+  @include onDesktop {
+    width: 24px;
+    height: 24px;
+  }
+  
+  &--menu {
+    grid-row-start: 1;
+    grid-column-start: 3;
+    grid-row-end: 2;
+    grid-column-end: 4;
+
+    height: 12px;
+
+    @include onDesktop {
+      height: 18.67px;
+      background-image: url(../images/menu-desktop.svg);
+    }
+
+    background-image: url(../images/menu.svg);
+
+    &:hover {
+      background-image: url(../images/menu-hover.svg);
+
+      @include onDesktop {
+        width: 18.67px;
+        height: 24px;
+        background-image: url(../images/menu-hover-desktop.svg);
+      }
+    }
+  }
+
+  &--phone {
+    grid-row-start: 1;
+    grid-column-start: 2;
+    grid-row-end: 2;
+    grid-column-end: 3;
+
+    background-image: url(../images/phone.svg);
+  }
+
+  &--cross {
+    background-image: url(../images/cross.svg);
+  }
+}
+
+.top-actions {
+  --icon-width: 18px;
+
+  display: grid;
+  grid-template-columns: 1fr var(--icon-width) var(--icon-width);
+  gap: 30px;
+  align-items: center;
+
+  @include onDesktop {
+    --icon-width: 24px;
+    gap: 40px;
+  }
 }
 
 .header {
@@ -69,7 +124,38 @@
   
     box-sizing: border-box;
     height: 100vh;
-    padding: 40px 0;
+    padding: $headerVerticalPadding 0;
+  }
+
+  &__call {
+    text-decoration: none;
+
+    @include onDesktop {
+      &::before {
+        content: "+1 234 555-55-55";
+        position: relative;
+        top: 50%;
+        transform: translate(-100%, -50%);
+  
+        display: block;
+        width: max-content;
+        padding-right: 12px;
+  
+        font-weight: 700;
+        font-size: 12px;
+        line-height: 16px;
+        color: #292929;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      &:hover::before {
+        opacity: 1;
+        pointer-events: all;
+      }
+    }
   }
 
   &__title {
@@ -110,75 +196,14 @@
       }
     }
   }
+}
 
-  &__nav {
-    display: grid;
-    grid: 1fr / 1fr 1fr;
-    gap: 20px;
-    place-items: center start;
-  }
+.menu {
+  background-color: $colorGray;
 
-  &__call {
-    grid-area: 1 / 2 / 2 / 3;
-    justify-self: end;
-    margin-right: 48px;
-
-    text-decoration: none;
-    background-image: url(../images/phone.svg);
-
-    @include onDesktop {
-      &::before {
-        content: "+1 234 555-55-55";
-        position: relative;
-        top: 50%;
-        transform: translate(-100%, -50%);
-  
-        display: block;
-        width: max-content;
-        padding-right: 12px;
-  
-        font-weight: 700;
-        font-size: 12px;
-        line-height: 16px;
-        color: #292929;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        opacity: 0;
-        pointer-events: none;
-      }
-
-      &:hover::before {
-        opacity: 1;
-        pointer-events: all;
-      }
-    }
-  }
-
-  &__menu-opener {
-    grid-area: 1 / 2 / 2 / 3;
-    justify-self: end;
-
-    height: 12px;
-
-    @include onDesktop {
-      height: 18.67px;
-      background-image: url(../images/menu-desktop.svg);
-
-    }
-
-    background-image: url(../images/menu.svg);
-
-    &:hover {
-      background-image: url(../images/menu-hover.svg);
-
-      @include onDesktop {
-        width: 18.67px;
-        height: 24px;
-        background-image: url(../images/menu-hover-desktop.svg);
-        
-      }
-
-    }
-
+  &__content {
+    height: 100vh;
+    box-sizing: border-box;
+    padding: $headerVerticalPadding 0;
   }
 }
