--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,209 +1,12 @@
 @import "utils";
 
-@mixin onDesktop {
-  @media (min-width: 1024px) {
-    @content;
-  }
-}
-
-$headerVerticalPadding: 40px;
-$colorGray: #e5e5e5;
-
-.page {
-  &__body {
-    font-family: "Inter", sans-serif;
-
-    margin: 0;
-    background: $c-gray;
-  }
-}
-
-.logo {
-  &__image {
-    width: 130px;
-    height: 16.38px;
-
-    @include onDesktop {
-      width: 190.08px;
-      height: 24px;
-    }
-  }
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 1020px;
-  padding: 0 20px;
-
-  @include onDesktop {
-    padding: 0 40px;
-  }
-}
-
-.icon {
-  display: block;
-  width: 100%;
-  height: 100%;
-
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-
-  @include onDesktop {
-    width: 24px;
-    height: 24px;
-  }
-  
-  &--menu {
-    grid-row-start: 1;
-    grid-column-start: 3;
-    grid-row-end: 2;
-    grid-column-end: 4;
-
-    height: 12px;
-
-    @include onDesktop {
-      height: 18.67px;
-      background-image: url(../images/menu-desktop.svg);
-    }
-
-    background-image: url(../images/menu.svg);
-
-    &:hover {
-      background-image: url(../images/menu-hover.svg);
-
-      @include onDesktop {
-        width: 18.67px;
-        height: 24px;
-        background-image: url(../images/menu-hover-desktop.svg);
-      }
-    }
-  }
-
-  &--phone {
-    grid-row-start: 1;
-    grid-column-start: 2;
-    grid-row-end: 2;
-    grid-column-end: 3;
-
-    background-image: url(../images/phone.svg);
-  }
-
-  &--cross {
-    background-image: url(../images/cross.svg);
-  }
-}
-
-.top-actions {
-  --icon-width: 18px;
-
-  display: grid;
-  grid-template-columns: 1fr var(--icon-width) var(--icon-width);
-  gap: 30px;
-  align-items: center;
-
-  @include onDesktop {
-    --icon-width: 24px;
-    gap: 40px;
-  }
-}
-
-.header {
-  background-size: cover;
-  background-position: center;
-  background-image: url(../images/header.jpg);
-
-  @include onDesktop {
-    background-image: url(../images/header-desktop.jpg);
-  }
-
-  &__content {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  
-    box-sizing: border-box;
-    height: 100vh;
-    padding: $headerVerticalPadding 0;
-  }
-
-  &__call {
-    text-decoration: none;
-
-    @include onDesktop {
-      &::before {
-        content: "+1 234 555-55-55";
-        position: relative;
-        top: 50%;
-        transform: translate(-100%, -50%);
-  
-        display: block;
-        width: max-content;
-        padding-right: 12px;
-  
-        font-weight: 700;
-        font-size: 12px;
-        line-height: 16px;
-        color: #292929;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        opacity: 0;
-        pointer-events: none;
-      }
-
-      &:hover::before {
-        opacity: 1;
-        pointer-events: all;
-      }
-    }
-  }
-
-  &__title {
-    font-size: 32px;
-    line-height: 100%;
-    font-weight: 800;
-    font-style: italic;
-    color: #292929;
-    letter-spacing: -1.5px;
-
-    margin-bottom: 54px;
-
-    @include onDesktop {
-      font-size: 48px;
-
-      margin-bottom: 14px;
-    }
-
-    &::before {
-      content: "";
-      display: block;
-
-      width: 32px;
-      height: 27px;
-      margin-bottom: 16px;
-
-      background-size: cover;
-      background-position: center;
-      background-image: url(../images/above-title.svg);
-
-      @include onDesktop {
-        background-image: url(../images/above-title-desktop.svg);
-
-        width: 63px;
-        height: 76px;
-
-        margin-bottom: 32px;
-      }
-    }
-  }
-}
-
-.menu {
-  background-color: $colorGray;
-
-  &__content {
-    height: 100vh;
-    box-sizing: border-box;
-    padding: $headerVerticalPadding 0;
-  }
-}
+@import "blocks/page";
+@import "blocks/container";
+@import "blocks/logo";
+@import "blocks/icon";
+@import "blocks/top-action";
+@import "blocks/header";
+@import "blocks/menu";
+@import "blocks/footer";
+@import "blocks/grid";
+@import "blocks/buy-direct";
