fix buy section, add gallery images

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,4 +9,5 @@
 @import "blocks/menu";
 @import "blocks/footer";
 @import "blocks/grid";
-@import "blocks/buy-direct";
+@import "blocks/buy";
+@import "blocks/place";
