--- a/src/styles/blocks/buy.scss
+++ b/src/styles/blocks/buy.scss
@@ -1,4 +1,4 @@
-.buy-direct {
+.buy {
   &__title {
     margin: 0 0 32px;
 
@@ -25,6 +25,8 @@
   }
 
   &__paragraph {
+    margin-top: 40px;
+    
     font-weight: 400;
     font-size: 16px;
     line-height: 27px;
