--- a/src/styles/blocks/grid.scss
+++ b/src/styles/blocks/grid.scss
@@ -6,11 +6,25 @@
   @include onDesktop {
     grid-template-columns: repeat(12, 1fr);
     column-gap: 24px;
+  }
 
-    &__item {
-      @for $start from 1 through 12 {
-        @for $end from $start through 12 {
-          &--#{$start}-#{$end} {
+  &--desktop {
+    display: block;
+
+    @include onDesktop {
+      display: grid;
+    }
+  }
+
+  &__item {
+    @for $start from 1 through 12 {
+      @for $end from $start through 12 {
+        &--#{$start}-#{$end} {
+          grid-column: #{$start} / #{$end + 1};
+        }
+
+        &--desktop-#{$start}-#{$end} {
+          @include onDesktop {
             grid-column: #{$start} / #{$end + 1};
           }
         }
