--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -24,6 +24,14 @@
 
   &__section {
     margin-bottom: 120px;
+
+    &--buy {
+      margin-bottom: 110px;
+
+      @include onDesktop {
+        margin-bottom: 120px;
+      }
+    }
   }
 
   &__section-title {
