--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,9 +1,13 @@
 .page {
+  font-family: "Inter", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: #3e3e3e;
+
   scroll-behavior: smooth;
   
   &__body {
-    font-family: "Inter", sans-serif;
-
     margin: 0;
     background: $colorWhite;
   }
@@ -35,11 +39,17 @@
   }
 
   &__section-title {
+    margin-bottom: 48px;
+
     font-weight: 700;
     font-size: 32px;
     line-height: 32px;
     text-align: center;
     letter-spacing: -1.5px;
     color: #292929;
+
+    @include onDesktop {
+      margin-bottom: 64px;
+    }
   }
 }
