--- a/src/styles/blocks/place.scss
+++ b/src/styles/blocks/place.scss
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     width: 100%;
     max-height: 320px;
+    overflow: hidden;
 
     &::after {
       content: "";
@@ -25,5 +26,16 @@
 
     object-fit: cover;
     object-position: center;
+  }
+
+  &__photos {
+    margin-bottom: 16px;
+  }
+
+  &__description {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 140%;
+    color: #292929;
   }
 }
