--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -39,7 +39,7 @@
   }
 
   &__section-title {
-    margin-bottom: 48px;
+    margin-bottom: 0 0 48px;
 
     font-weight: 700;
     font-size: 32px;
@@ -50,6 +50,8 @@
 
     @include onDesktop {
       margin-bottom: 64px;
+      font-size: 48px;
+      line-height: 48px;
     }
   }
 }
