--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,3 +13,6 @@
 @import "blocks/place";
 @import "blocks/gallery";
 @import "blocks/button";
+@import "blocks/recommended";
+@import "blocks/contact-us";
+@import "blocks/form-field";
