--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -7,6 +7,10 @@
     background-image: url(../images/header-desktop.jpg);
   }
 
+  &__top {
+    @include top-actions;
+  }
+
   &__content {
     display: flex;
     flex-direction: column;
@@ -15,37 +19,6 @@
     box-sizing: border-box;
     height: 100vh;
     padding: $headerVerticalPadding 0;
-  }
-
-  &__call {
-    text-decoration: none;
-
-    @include onDesktop {
-      &::before {
-        content: "+1 234 555-55-55";
-        position: relative;
-        top: 50%;
-        transform: translate(-100%, -50%);
-  
-        display: block;
-        width: max-content;
-        padding-right: 12px;
-  
-        font-weight: 700;
-        font-size: 12px;
-        line-height: 16px;
-        color: #292929;
-        letter-spacing: 2px;
-        text-transform: uppercase;
-        opacity: 0;
-        pointer-events: none;
-      }
-
-      &:hover::before {
-        opacity: 1;
-        pointer-events: all;
-      }
-    }
   }
 
   &__title {
