--- a/src/styles/blocks/recommended.scss
+++ b/src/styles/blocks/recommended.scss
@@ -1,4 +1,11 @@
 .recommended {
+  &__container {
+    @include onDesktop {
+      display: flex;
+      gap: 24px;
+    }
+  }
+
   &__item {
     margin-bottom: 48px;
 
