--- a/src/styles/blocks/buy.scss
+++ b/src/styles/blocks/buy.scss
@@ -1,5 +1,11 @@
 .buy {
   &__content {
+    @include onTablet {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      column-gap: 24px;
+    }
+
     @include onDesktop {
       display: grid;
       grid-template-columns: repeat(12, 1fr);
@@ -16,6 +22,13 @@
     letter-spacing: -1.5px;
     color: #292929;
 
+    @include onTablet {
+      grid-column: 1 / 4;
+      margin-bottom: 0;
+      font-size: 40px;
+      line-height: 40px;
+    }
+
     @include onDesktop {
       grid-column: 1 / 6;
       margin-bottom: 0;
@@ -25,9 +38,12 @@
   }
 
   &__description {
+    @include onTablet {
+      grid-column: 4 / 7;
+    }
+
     @include onDesktop {
       grid-column: 6 / 11;
-
     }
   }
 
