--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,9 +7,8 @@
 @import "blocks/header";
 @import "blocks/menu";
 @import "blocks/footer";
-@import "blocks/grid";
 @import "blocks/buy";
-@import "blocks/place";
+@import "blocks/category";
 @import "blocks/gallery";
 @import "blocks/button";
 @import "blocks/recommended";
