fix layout according design bose 744 rectangle 27 person 1

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -39,7 +39,7 @@
     &--first {
       margin-top: 48px;
 
-      @include onDesktop {
+      @include onTablet {
         margin-top: 0;
       }
     }
