--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,5 +12,6 @@
 @import "blocks/gallery";
 @import "blocks/button";
 @import "blocks/recommended";
+@import "blocks/article";
 @import "blocks/contact-us";
 @import "blocks/form-field";
