--- a/src/styles/blocks/buy.scss
+++ b/src/styles/blocks/buy.scss
@@ -52,11 +52,13 @@
 
     font-weight: 700;
     font-size: 16px;
-    line-height: 140%;
+    line-height: 22px;
     color: #292929;
   }
 
   &__paragraph {
     margin-top: 40px;
+    line-height: 27px;
+    color: #292929;
   }
 }
