--- a/src/styles/blocks/category.scss
+++ b/src/styles/blocks/category.scss
@@ -59,7 +59,12 @@
   &__description {
     font-weight: 700;
     font-size: 16px;
-    line-height: 140%;
+    line-height: 22px;
     color: #292929;
+
+    @include onTablet {
+      font-size: 24px;
+      line-height: 34px;
+    }
   }
 }
