--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -4,6 +4,11 @@
   background-size: cover;
   background-position: center;
 
+  @include onTablet {
+    height: 400px;
+    background-image: url(../images/footer-tablet.jpg);
+  }
+
   @include onDesktop {
     height: 460px;
     background-image: url(../images/footer-desktop.jpg);
