--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -2,7 +2,7 @@
   &__category {
     margin-bottom: 40px;
 
-    @include onDesktop {
+    @include onTablet {
       margin-bottom: 64px;
     }
   }
