--- a/src/styles/blocks/recommended.scss
+++ b/src/styles/blocks/recommended.scss
@@ -1,5 +1,11 @@
 .recommended {
   &__container {
+    @include onTablet {
+      display: grid;
+      grid-template-columns: repeat(6, 1fr);
+      gap: 24px;
+    }
+
     @include onDesktop {
       display: flex;
       gap: 24px;
@@ -13,46 +19,13 @@
       margin-bottom: 0;
     }
 
+    @include onTablet {
+      grid-column: 2 / 6;
+      margin-bottom: 40px;
+    }
+
     @include onDesktop {
       margin-bottom: 0;
     }
-  }
-}
-
-.article {
-  &__photo-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 24px;
-
-    margin-bottom: 32px;
-  }
-
-  &__photo {
-    grid-column: 1 / 5;
-    width: 100%;
-  }
-
-  &__title {
-    margin: 0 0 8px;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 140%;
-    color: #292929;
-  }
-
-  &__subtitle {
-    margin: 0 0 12px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 140%;
-    color: #292929;
-  }
-
-  &__price {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 140%;
-    color: #292929;
   }
 }
