--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -25,7 +25,7 @@
   gap: 30px;
   align-items: center;
 
-  @include onDesktop {
+  @include onTablet {
     --icon-width: 24px;
     gap: 40px;
   }
