--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -1,13 +1,6 @@
 .icon {
   position: relative;
   display: block;
-  width: 100%;
-  height: 100%;
-
-  @include onDesktop {
-    width: 24px;
-    height: 24px;
-  }
 
   background-size: cover;
   background-position: center;
@@ -43,24 +36,24 @@
   }
 
   &--menu {
-    grid-row-start: 1;
-    grid-column-start: 3;
-    grid-row-end: 2;
-    grid-column-end: 4;
+    grid-column: 3 / 4;
 
+    width: 18px;
     height: 12px;
+    background-image: url(../images/menu.svg);
 
-    @include onDesktop {
+    @include onTablet {
+      width: 24px;
       height: 18.67px;
       background-image: url(../images/menu-desktop.svg);
     }
 
-    background-image: url(../images/menu.svg);
-
     &:hover {
+      width: 18px;
+      height: 12px;
       background-image: url(../images/menu-hover.svg);
 
-      @include onDesktop {
+      @include onTablet {
         width: 18.67px;
         height: 24px;
         background-image: url(../images/menu-hover-desktop.svg);
@@ -69,20 +62,29 @@
   }
 
   &--phone {
-    grid-row-start: 1;
-    grid-column-start: 2;
-    grid-row-end: 2;
-    grid-column-end: 3;
+    grid-column: 2 / 3;
 
+    width: 18px;
+    height: 18px;
     background-image: url(../images/phone.svg);
+    
+    @include onTablet {
+      width: 24px;
+      height: 24px;
+    }
   }
 
   &--cross {
-    grid-row-start: 1;
-    grid-column-start: 3;
-    grid-row-end: 2;
-    grid-column-end: 4;
+    grid-column: 3 / 4;
     
     background-image: url(../images/cross.svg);
+
+    width: 16px;
+    height: 16px;
+
+    @include onDesktop {
+      width: 21.33px;
+      height: 21.33px;
+    }
   }
 }
