--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -4,7 +4,11 @@
   &__content {
     height: 100vh;
     box-sizing: border-box;
-    padding: $headerVerticalPadding 0;
+    padding: 40px 0;
+
+    @include onTablet {
+      padding: 52px 0;
+    }
   }
 
   &__top {
