--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -14,6 +14,14 @@
   &__top {
     @include top-actions;
     margin-bottom: 54.62px;
+
+    @include onTablet {
+      margin-bottom: 56px;
+    }
+
+    @include onDesktop {
+      margin-bottom: 80px;
+    }
   }
 
   &__list {
