fix layout according design bose 320 menu 1260

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -50,14 +50,14 @@
 
     font-weight: 400;
     font-size: 14px;
-    line-height: 140%;
+    line-height: 20px;
     color: #9fadc2;
   }
 
   &__info-link {
     font-weight: 400;
     font-size: 16px;
-    line-height: 140%;
+    line-height: 22px;
     color: #3e3e3e;
     text-decoration: none;
   }
