fix layout according design bose 1260 header hovers

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -5,6 +5,10 @@
     @include onTablet {
       margin-bottom: 64px;
     }
+
+    &--last {
+      margin-bottom: 40px;
+    }
   }
 
   &__button-container {
