--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -11,6 +11,7 @@
 
   text-decoration: none;
   color: #fff;
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 27px;
@@ -29,6 +30,7 @@
     border: 3px solid #292929;
     border-radius: 40px;
   }
+  
   &:active {
     background-color: #111;
     border-radius: 40px;
