--- a/src/styles/blocks/category.scss
+++ b/src/styles/blocks/category.scss
@@ -11,16 +11,17 @@
   }
 
   &__photo-container {
+    display: block;
     position: relative;
 
     box-sizing: border-box;
     width: 100%;
+    min-height: 130px;
     max-height: 320px;
     overflow: hidden;
 
     &::after {
       content: "";
-      display: block;
       padding-bottom: 100%;
     }
 
@@ -48,6 +49,7 @@
   }
 
   &__photo {
+    display: block;
     position: absolute;
     width: 100%;
     height: 100%;
