--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,16 +1,16 @@
 .footer {
   height: 200px;
-  background-image: url(../images/footer.jpg);
+  background-image: url(../images/backgrounds/footer.jpg);
   background-size: cover;
   background-position: center;
 
   @include onTablet {
     height: 400px;
-    background-image: url(../images/footer-tablet.jpg);
+    background-image: url(../images/backgrounds/footer-tablet.jpg);
   }
 
   @include onDesktop {
     height: 460px;
-    background-image: url(../images/footer-desktop.jpg);
+    background-image: url(../images/backgrounds/footer-desktop.jpg);
   }
 }
