--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,14 +1,14 @@
 .header {
   background-size: cover;
   background-position: center;
-  background-image: url(../images/header.jpg);
+  background-image: url(../images/backgrounds/header.jpg);
 
   @include onTablet {
-    background-image: url(../images/header-tablet.jpg);
+    background-image: url(../images/backgrounds/header-tablet.jpg);
   }
 
   @include onDesktop {
-    background-image: url(../images/header-desktop.jpg);
+    background-image: url(../images/backgrounds/header-desktop.jpg);
   }
 
   &__top {
@@ -60,10 +60,10 @@
 
       background-size: cover;
       background-position: center;
-      background-image: url(../images/above-title.svg);
+      background-image: url(../images/icons/above-title.svg);
 
       @include onTablet {
-        background-image: url(../images/above-title-desktop.svg);
+        background-image: url(../images/icons/above-title-desktop.svg);
 
         width: 63px;
         height: 76px;
