--- a/src/styles/blocks/article.scss
+++ b/src/styles/blocks/article.scss
@@ -6,6 +6,11 @@
 
   &__photo {
     width: 100%;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__title {
