--- a/src/styles/blocks/category.scss
+++ b/src/styles/blocks/category.scss
@@ -56,6 +56,12 @@
 
     object-fit: cover;
     object-position: center;
+
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 
   &__description {
